--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,17 +1,22 @@
 <div class="nav">
+	<div class="move_left">
+	<div class="move_right">
 	<ul>
-		<li class="menu_overview"><a href="/">Overview</a></li>
-		<li class="menu_forums"><a href="/forums/">Forums</a></li>
-		<li class="menu_topics"><a href="/">Topics</a></li>
-		<li class="menu_create_topic"><a href="/topics/create/">Create Topic</a></li>
+		<li class="menu_left menu_overview"><a href="/">Overview</a></li>
+		<li class="menu_left menu_forums"><a href="/forums/">Forums</a></li>
+		<li class="menu_left menu_topics"><a href="/">Topics</a></li>
+		<li class="menu_left menu_create_topic"><a href="/topics/create/">Create Topic</a></li>
 		{{ if .CurrentUser.Loggedin }}
-		<li class="menu_account"><a href="/user/edit/critical/">Account</a></li>
-		<li class="menu_account"><a href="/user/{{.CurrentUser.ID}}">Profile</a></li>
-		{{ if .CurrentUser.Is_Super_Mod}}<li class="menu_account"><a href="/panel/forums/">Panel</a></li>{{end}}
-		<li class="menu_logout"><a href="/accounts/logout?session={{.CurrentUser.Session}}">Logout</a></li>
+		<li class="menu_left menu_account"><a href="/user/edit/critical/">Account</a></li>
+		<li class="menu_left menu_account"><a href="/user/{{.CurrentUser.ID}}">Profile</a></li>
+		{{ if .CurrentUser.Is_Super_Mod}}<li class="menu_left menu_account"><a href="/panel/forums/">Panel</a></li>{{end}}
+		<li class="menu_left menu_logout"><a href="/accounts/logout?session={{.CurrentUser.Session}}">Logout</a></li>
 		{{ else }}
-		<li class="menu_register"><a href="/accounts/create/">Register</a></li>
-		<li class="menu_login"><a href="/accounts/login/">Login</a></li>
+		<li class="menu_left menu_register"><a href="/accounts/create/">Register</a></li>
+		<li class="menu_left menu_login"><a href="/accounts/login/">Login</a></li>
 		{{ end }}
 	</ul>
+	</div>
+	</div>
+	<div style="clear: both;"></div>
 </div>
