Added the Group Permissions system. Added the account activation system (just manual activations, email ones are coming later o.o). Changed the benchmark test to an interface{} struct versus a typed one. Changed the compiled template holders from a map of functions to handle variables. Added elses for loops in the template compiler. Added the list setting type. Added friendlier values to the setting page :) Added a link to the profile on the User Manager and new mini-tag mark-up to go with it.

--- a/public/main.css
+++ b/public/main.css
@@ -297,6 +297,21 @@ button.username
 	position: relative;
 	top: -0.25px;
 }
+.tag-mini
+{
+	text-transform: none;
+	margin-left: 0px;
+	padding-left: 3px;
+	padding-right: 3px;
+	padding-top: 1.5px;
+	padding-bottom: 0px;
+	color: #505050; /* 80,80,80 */
+	background-color: #FFFFFF;
+	border-style: dotted;
+	border-color: #505050; /* 232,232,232. All three RGB colours being the same seems to create a shade of gray */
+	border-width: 1px;
+	font-size: 10px;
+}
 
 .show_on_edit
 {
