--- a/templates/forums.html
+++ b/templates/forums.html
@@ -3,6 +3,7 @@
 	{{range .ItemList}}<div class="rowitem">
 		<a href="/forum/{{.ID}}" style="font-size: 20px;position:relative;top: -2px;font-weight: normal;text-transform: none;">{{.Name}}</a>
 		<a href="/topic/{{.LastTopicID}}" style="font-weight: normal;text-transform: none;float: right;">{{.LastTopic}} <small style="font-size: 12px;">{{.LastTopicTime}}</small></a>
-	</div>{{end}}
+	</div>
+	{{else}}<div class="rowitem passive">You don't have access to any forums.</div>{{end}}
 </div>
 {{template "footer.html" . }}
