--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,7 +2,7 @@
 <div class="colblock_left" style="max-width: 220px;">
 	<div class="rowitem" style="padding: 0;"><img src="{{.Something.Avatar}}" style="max-width: 100%;margin: 0;"/></div>
 	<div class="rowitem" style="text-transform: capitalize;">
-	<span style="font-size: 18px;">{{.Something.Name}}</span>{{if .Something.Tag}}<span class="username" style="float: right;">{{.Something.Tag}}</span>{{end}}
+	<span style="font-size: 18px;">{{.Something.Name}}</span>{{if .Something.Tag}}<span class="username" style="float: right;font-weight: normal;">{{.Something.Tag}}</span>{{end}}
 	</div>
 	<div class="rowitem passive">
 		<a class="username">Add Friend</a>
