--- a/templates/header.html
+++ b/templates/header.html
@@ -8,6 +8,7 @@
 		var session = "{{.CurrentUser.Session}}";
 		</script>
 		<script type="text/javascript" src="/static/global.js"></script>
+		<meta name="viewport" content="width=device-width,initial-scale = 1.0, maximum-scale=1.0,user-scalable=no" />
 	</head>
 	<body>
 		<div class="container">
