--- a/templates/panel-settings.html
+++ b/templates/panel-settings.html
@@ -1,16 +1,5 @@
 {{template "header.html" . }}
-<div class="colblock_left">
-	<div class="rowitem"><a>Control Panel</a></div>
-	<div class="rowitem passive"><a href="/panel/forums/">Forums</a></div>
-	<div class="rowitem passive"><a href="/panel/settings/">Settings</a></div>
-	<div class="rowitem passive"><a href="/panel/plugins/">Plugins</a></div>
-	<div class="rowitem passive"><a href="/panel/users/">Users</a></div>
-	<div class="rowitem passive"><a href="/panel/groups/">Groups</a></div>
-	<div class="rowitem passive"><a>Coming Soon</a></div>
-	<div class="rowitem passive"><a>Coming Soon</a></div>
-	<div class="rowitem passive"><a>Coming Soon</a></div>
-	<div class="rowitem passive"><a href="/forum/-1">Reports</a></div>
-</div>
+{{template "panel-menu.html" . }}
 <div class="colblock_right">
 	<div class="rowitem"><a>Settings</a></div>
 </div>
