Added an alternate topic layout. This might serve as the foundation of a second theme. You'll be able to switch between the two with ease once the theme system is in. The profile route is now compiled again. A custom struct is now used for it instead of the generic Page struct. Added the group list to the Control Panel. Tweaked the navbar CSS. Non-mods can no longer post in locked topics. Locked topics now have a gray background on the topic view header, the forum view, and the topiclist, The reply content box no longer shows up on topics which don't have any replies.

--- a/public/main.css
+++ b/public/main.css
@@ -47,15 +47,13 @@ li
 	font-weight: bold;
 	text-transform: uppercase;
 }
+li:hover { background: rgb(250,250,250); }
 li a
 {
 	text-decoration: none;
 	color: #515151;
 }
-li a:hover
-{
-	color: #7a7a7a;
-}
+/*li a:hover { color: #7a7a7a; }*/
 .menu_left
 {
 	float: left;
@@ -131,7 +129,7 @@ li a:hover
 	font-weight: normal;
 	text-transform: none;
 }
-.rowitem:not(:last-child)/*:not(:only-child)*/
+.rowitem:not(:last-child)
 {
 	border-bottom: 1px dotted #ccc;
 }
