Added a custom router which is twice as fast as the old one. Added support for SSL. Added the email system. Not fully tested. Added Email Verification. Added the Emails Page in the Account Manager. Email Activation is now fully supported. Fixed CustomErrorJSQ() and added CustomError(). Added commented out tests for Vestigo. Added tests for the new (possibly temporary) custom router. Swapped some of the custom error blocks for the Account Manager with LocalError calls. Moved the account menu into it's own template.

--- a/templates/account-own-edit.html
+++ b/templates/account-own-edit.html
@@ -1,13 +1,5 @@
 {{template "header.html" . }}
-<div class="colblock_left">
-	<div class="rowitem"><a>My Account</a></div>
-	<div class="rowitem passive"><a href="/user/edit/avatar/">Edit Avatar</a></div>
-	<div class="rowitem passive"><a href="/user/edit/username/">Edit Username</a></div>
-	<div class="rowitem passive"><a href="/user/edit/critical/">Edit Password</a></div>
-	<div class="rowitem passive"><a>Coming Soon</a></div>
-	<div class="rowitem passive"><a>Coming Soon</a></div>
-	<div class="rowitem passive"><a>Coming Soon</a></div>
-</div>
+{{template "account-menu.html" . }}
 <div class="colblock_right">
 	<div class="rowitem"><a>Edit Password</a></div>
 </div>
