--- a/templates/account-own-edit-username.html
+++ b/templates/account-own-edit-username.html
@@ -1,13 +1,5 @@
 {{template "header.html" . }}
-<div class="colblock_left">
-	<div class="rowitem"><a>My Account</a></div>
-	<div class="rowitem passive"><a href="/user/edit/avatar/">Edit Avatar</a></div>
-	<div class="rowitem passive"><a href="/user/edit/username/">Edit Username</a></div>
-	<div class="rowitem passive"><a href="/user/edit/critical/">Edit Password</a></div>
-	<div class="rowitem passive"><a>Coming Soon</a></div>
-	<div class="rowitem passive"><a>Coming Soon</a></div>
-	<div class="rowitem passive"><a>Coming Soon</a></div>
-</div>
+{{template "account-menu.html" . }}
 <div class="colblock_right">
 	<div class="rowitem"><a>Edit Username</a></div>
 </div>
@@ -15,7 +7,7 @@
 	<form action="/user/edit/username/submit/" method="post">
 		<div class="formrow">
 			<div class="formitem"><a>Current Username</a></div>
-			<div class="formitem">{{.Something}}</div>
+			<div class="formitem">{{.CurrentUser.Name}}</div>
 		</div>
 		<div class="formrow">
 			<div class="formitem"><a>New Username</a></div>
